# PredictiveAnalytics

./: United Airlines Fleet edited .csv  Weather_data_13.05.2024.csv  Weather_data_13.05.2024.xlsx  daily_weather_data.csv  flight_history_actuals.ipynb  holidays_2023_2024.csv  pyproject.toml
FlightData/: GetFlightsData.py  flightsData.ipynb
FutureData/: ScheduledFlights.ipynb  future_flights_data.csv  source_1038.html  source_1310.html  source_1825.html  source_2320.html  source_2400.html
HolidayData/: holidays.ipynb
Model/: GetFlightsData.py  delay_predictor.ipynb  feature_importances.csv  feature_importances_without_destinations.csv  future_data.csv  past_data.csv  prediction_2024_05_31.csv
PlaneData/: ExpressFleet.csv  GetPlaneData.ipynb  MainlineFleet.csv  United_Airlines_Fleet_edited.csv
WeatherData/: Weather_data_13.05.2024.csv  hourly_dataframe_forecast (1).csv  hourly_dataframe_forecast.csv  hourly_dataframe_past (1).csv  weather.ipynb
