[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Judith Rethmann <judith.rethmann2@m-ai.rhenus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^2.2.2"
prophet = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

